# parallel_task_bench

./: LICENSE  README.md
interop/example/: CMakeLists.txt  README.txt
interop/example/argobots/: example.c
interop/example/common/: helpers.h
interop/example/openmp/: example.c
interop/example/qthreads/: example.c
interop/heat/: CMakeLists.txt  README.txt
interop/heat/argobots/: CMakeLists.txt
interop/heat/argobots/basic/: basic.c
interop/heat/argobots/modules/: FindArgobots.cmake
interop/heat/modules/: FindArgobots.cmake  FindQthreads.cmake
interop/heat/openmp/: CMakeLists.txt  heat.cpp  heat.hpp  main.cpp  matrix.hpp  misc.cpp  polling.hpp
interop/heat/openmp/basic/: basic.c
interop/heat/openmp/common/: helpers.h
interop/heat/openmp/heat/: main.cpp  polling.cpp
interop/heat/qthreads/: CMakeLists.txt  heat.cpp  heat.hpp  main.cpp  matrix.hpp  misc.cpp
interop/heat/qthreads/basic/: basic.c
interop/heat/qthreads/modules/: FindQthreads.cmake
interop/heat/scripts/: all.sh  driver.sh  driver_2.sh  plot_over_N.py  run.sh  run_2.sh  run_OpenMP_smp.sh  run_Qthreads.sh  run_Qthreads_smp.sh
interop/heat/utils/: helpers.h
interop/osu-micro-bench/: CMakeLists.txt  README.txt
interop/osu-micro-bench/argobots/: osu_latency_abt_cont.c
interop/osu-micro-bench/openmp/: osu_latency_omp.c  osu_latency_omp_cont.c
interop/osu-micro-bench/qthreads/: osu_latency_qt_cont.c
interop/osu-ult-benchmarks/: ltmain.sh
interop/tric/: CMakeLists.txt  README.txt
interop/tric/src/openmp/: bfastric.hpp  dfastric.hpp  tric.hpp
reductions/: CMakeLists.txt
reductions/common/: timer.h
reductions/dot/: dot-parfor.cpp  dot-seq.h  dot-threadpriv.cpp
reductions/fib/: fib-atomic.cpp  fib-parallel.cpp  fib-seq.h  fib-taskgroup-untied.cpp  fib-threadpriv.cpp
reductions/openmp/common/: helpers.h
reductions/openmp/dot/: dot-atomic.cpp  dot-taskloop-untied.cpp  dot-taskloop.cpp
reductions/openmp/fib/: fib-nored.cpp  fib-parallel-untied.cpp  fib-taskgroup.cpp
reductions/openmp/others/TSP/: tsp.cpp
reductions/openmp/others/array_sum/: array_sum.cpp
reductions/openmp/others/knightstour/: knights_tour.cpp  knightstour_serial_using_board.cpp
reductions/openmp/others/max_height_tree/: max_height_tree_atomic.cpp  max_height_tree_local.cpp
reductions/openmp/others/nbinarywords/: nbinarywords_atomic.cpp  nbinarywords_global.cpp  nbinarywords_local.cpp
reductions/openmp/others/nqueens/: nqueens_atomic.cpp  nqueens_local.cpp
reductions/openmp/powerset/: powerset-atomic.cpp  powerset-nored.cpp  powerset-parallel.cpp  powerset-taskgroup.cpp
reductions/openmp/powerset-UDR/: powerset-UDR-atomic.cpp  powerset-UDR-seq.h  powerset-UDR-threadpriv.cpp
reductions/openmp/powerset-final/: powerset-nored-final.cpp  powerset-taskgroup-final.cpp  powerset-taskloop-final.cpp  powerset-threadpriv-final.cpp
reductions/openmp/scripts/: launcher.sh  rm_results.sh  run_over_cutoff.sh  run_over_tasks.sh
reductions/others/knapsack/: knapsack.cpp
reductions/others/nqueens/: nqueens_global.cpp
reductions/powerset/: powerset-taskloop.cpp  powerset-threadpriv.cpp
reductions/powerset-UDR/: powerset-UDR-nored.cpp  powerset-UDR-parallel.cpp  powerset-UDR-taskgroup.cpp  powerset-UDR-taskloop.cpp
reductions/powerset-final/: powerset-atomic-final.cpp  powerset-parallel-final.cpp  powerset-seq.h
reductions/scripts/: run_over_N.sh  run_single.sh  setup-compilers.sh
results/reductions/Xeon8160-24-core/dot/: plot_over_N_HueIsThreads.py  plot_over_N_tasks_avg.sh  plot_over_cutoff_HueIsThreads.py
results/reductions/Xeon8160-24-core/dot/overCutOff_HueIsTechnique/: dot-atomic_blake01_clang++_overNT.res  dot-atomic_blake01_g++_overNT.res  dot-parfor_blake01_g++_overNT.res  format.sh
results/reductions/Xeon8160-24-core/dot/overCutOff_HueIsThreads/: dot-parfor_blake01_clang++_overNT.res  dot-taskloop-untied_blake01_clang++_overNT.res  dot-taskloop_blake01_g++_overNT.res
results/reductions/Xeon8160-24-core/dot/overN_HueIsTechnique/: dot-taskloop-untied_blake28_g++_overN.res  dot-taskloop_blake28_g++_overN.res  dot-threadpriv_blake28_g++_overN.res
results/reductions/Xeon8160-24-core/dot/overN_HueIsThreads/: dot-atomic_blake28_clang++_overN.res
results/reductions/Xeon8160-24-core/fib/: plot_over_N_hueIsTechnique.py  plot_over_cutoff_hueIsThreads.py
results/reductions/Xeon8160-24-core/fib/overCutOff_HueIsTechnique/: fib-atomic_blake23_clang++_overCutOff.res  fib-parallel_blake23_clang++_overCutOff.res  fib-threadpriv_blake23_clang++_overCutOff.res  format.sh
results/reductions/Xeon8160-24-core/fib/overCutOff_HueIsThreads/: fib-nored_blake23_clang++_overCutOff.res  fib-parallel-untied_blake23_clang++_overCutOff.res  fib-taskgroup-untied_blake23_clang++_overCutOff.res  fib-taskgroup_blake23_clang++_overCutOff.res  fib-taskgroup_blake23_g++_overCutOff.res
results/reductions/Xeon8160-24-core/fib/overN_HueIsTechnique/: .nfs801b48f5006ae210000006c5  fib-atomic_blake23_g++_overN.res  fib-nored_blake23_clang++_overN.res  fib-parallel-untied_blake23_clang++_overN.res  fib-taskgroup-untied_blake23_clang++_overN.res  fib-taskgroup_blake23_clang++_overN.res  fib-threadpriv_blake23_clang++_overN.res  format.sh
results/reductions/Xeon8160-24-core/fib/overN_HueIsThreads/: fib-nored_blake23_g++_overN.res  fib-parallel_blake23_clang++_overN.res
results/reductions/Xeon8160-24-core/powerset/: plot_over_cutoff_HueIsThreads.py
results/reductions/Xeon8160-24-core/powerset-UDR/: plot_over_UDRSize_HueIsThreads.py
results/reductions/Xeon8160-24-core/powerset-UDR/overRT_HueIsThreads/: powerset-UDR-nored_blake01_g++_overRT.res  powerset-UDR-parallel_blake01_g++_overRT.res  powerset-UDR-taskgroup_blake01_clang++_overRT.res  powerset-UDR-taskgroup_blake01_g++_overRT.res  powerset-UDR-taskloop_blake01_g++_overRT.res
results/reductions/Xeon8160-24-core/powerset/overCutoff_HueIsTechnique/: format.sh  powerset-nored_blake23_clang++_overCutOff.res  powerset-taskgroup_blake23_clang++_overCutOff.res  powerset-taskloop_blake23_g++_overCutOff.res
results/reductions/openmp/Xeon8160-24-core/dot/: toPNG.sh  (+2 more)
(+164 files in other folders)
